[gd_scene load_steps=2 format=3 uid="uid://cqoqhac5qxjlv"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_aesqy"]

[node name="Main Menu" type="CanvasLayer"]
script = ExtResource("1_aesqy")

[node name="Start Game" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -124.0
offset_right = 100.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
text = "Play"

[node name="Level Select" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
text = "Level Selection"

[node name="Options" type="Button" parent="."]
custom_minimum_size = Vector2(80, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 74.0
offset_right = -10.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
text = "Options
"

[node name="Quit" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 74.0
offset_right = 100.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="pressed" from="Start Game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Level Select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
